<resources>
    <string name="app_name">LearnRoomCRUD</string>
    <string name="submit">Submit</string>
    <string name="data">Data</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="merk_barang">Merk Barang</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="daftar_inventaris">Daftar Inventaris</string>
    <string name="room_crud">Room CRUD</string>
    <string name="add_data">Add Data</string>
    <string name="read_data">Read Data</string>
    <string name="example_application">Example Application</string>
    <string name="edit_data">Edit Data</string>
    <string name="delete">Delete</string>
</resources>
